feat(backend): note update federation

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -1263,6 +1263,7 @@ confirmWhenRevealingSensitiveMedia: "Confirm when revealing sensitive media"
 sensitiveMediaRevealConfirm: "This might be a sensitive media. Are you sure to reveal?"
 createdLists: "Created lists"
 createdAntennas: "Created antennas"
+noteUpdatedAt: "Edited: {date} {time}"
 _delivery:
   status: "Delivery status"
   stop: "Suspended"
@@ -1706,6 +1707,7 @@ _role:
     gtlAvailable: "Can view the global timeline"
     ltlAvailable: "Can view the local timeline"
     canPublicNote: "Can send public notes"
+    canEditNote: "Note editing"
     mentionMax: "Maximum number of mentions in a note"
     canInvite: "Can create instance invite codes"
     inviteLimit: "Invite limit"
