--- a/locales/ko-KR.yml
+++ b/locales/ko-KR.yml
@@ -1249,6 +1249,7 @@ alwaysConfirmFollow: "팔로우일 때 항상 확인하기"
 inquiry: "문의하기"
 tryAgain: "다시 시도해 주세요."
 confirmWhenRevealingSensitiveMedia: "민감한 미디어를 열 때 두 번 확인"
+noteUpdatedAt: "편집됨: {date} {time}"
 _delivery:
   status: "전송 상태"
   stop: "정지됨"
@@ -1692,6 +1693,7 @@ _role:
     gtlAvailable: "글로벌 타임라인 보이기"
     ltlAvailable: "로컬 타임라인 보이기"
     canPublicNote: "공개 노트 허용"
+    canEditNote: "노트 편집 허용"
     mentionMax: "노트에 넣을 수 있는 멘션 수"
     canInvite: "서버 초대 코드 발행"
     inviteLimit: "초대 한도"
